--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.14",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
     "mui": "^0.0.1",
